--- a/app/static/sass/libs/_functions.scss
+++ b/app/static/sass/libs/_functions.scss
@@ -1,5 +1,5 @@
 /// Removes a specific item from a list.
-/// @author Hugo Giraudel
+/// @author Rocky
 /// @param {list} $list List.
 /// @param {integer} $index Index.
 /// @return {list} Updated list.
